navbar done + start parralax

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#">Contact</a>
             </div>
 
-            <button class="hamburger">
+            <button class="hamburger is-active">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -28,7 +28,12 @@
     </nav>
 
 
-
+<div class="parallax"><h1>TOTo by byl tvuj napooj</h1></div>
+<div style="height:1000px;background-color:red;font-size:36px">
+    Scroll Up and Down this page to see the parallax scrolling effect.
+    This div is just here to enable scrolling.
+    Tip: Try to remove the background-attachment property to remove the scrolling effect.
+</div>
 
 
     <script src="main.js"></script>
