--- a/Contact.html
+++ b/Contact.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Účetnicví kvalitně a v čas</title>
+    <title>Kontakt</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <nav>
         <div class="container">
-            <a href="#"><h1>Lorem ipsum</h1></a>
+            <a href="./index.html"><h1>Lorem ipsum</h1></a>
             <div class="menu">
-                <a href="#" class="is-active">Home</a>
+                <a href="./index.html">Home</a>
                 <a href="#">About</a>
                 <a href="#">Project</a>
-                <a href="./Contact.html">Contact</a>
+                <a href="./Contact.html" class="is-active">Contact</a>
             </div>
             
             
@@ -33,18 +33,14 @@
                 </div>
             </div>
     </nav>
-
-
-<div class="parallax">
-    <h1>TOTo by byl tvuj napooj</h1>
-</div>
-<article>
-    <div>
-    Scroll Up and Down this page to see the parallax scrolling effect.
-    This div is just here to enable scrolling.
-    Tip: Try to remove the background-attachment property to remove the scrolling effect.
+<div class="container">
+    <div class="section">
+        <h1 style="color: black;">Kontaktujte nás</h1>
+        <p>Jsme tu pro vás</p>
+        <p>Postaráme se o vaše účetnictví a daně</p>
+        <h2>100 000 000</H2>
     </div>
-</article>
-    <script src="main.js"></script>
+</div>
+<script src="main.js"></script>
 </body>
 </html>
