--- a/index.html
+++ b/index.html
@@ -7,15 +7,39 @@
     <title>Účetnicví kvalitně a v čas</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="fonts.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Tangerine:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <h5 class="title">
+            Účetnictví pro malé a střední firmy
+        </h5>
+        <h2>
+            Vaše účetnictví kvalitně a v čas
+        </h2>
+        <h4>
+            Nabídka služeb
+        </h4>
+        <element class="editor">
+            <ul>
+                <li>Vedení účetnictví (podvojné účetnictví)</li>
+                <li>Vedení daňové evidence (jednoduché účetnictví)</li>
+                <li>Vedení mzdové a personální agendy</li>
+                <li>Daňová přiznání a výkazy</li>
+                <li>Zastupování na úřadech</li>
+            </ul>
+        </element>
+    </header>
     <nav>
         <div class="container">
-            <a href="#"><h1>Lorem ipsum</h1></a>
+            <a href="#"><h1>uctojbc</h1></a>
             <div class="menu">
                 <a href="#" class="is-active">Home</a>
-                <a href="#">About</a>
-                <a href="#">Project</a>
+                <a href="./Nabídky.html">Nabídky</a>
+                <a href="#">O nás</a>
                 <a href="./Contact.html">Contact</a>
             </div>
             
@@ -32,17 +56,33 @@
                   <a href="#contact">Contact</a>
                 </div>
             </div>
+        </div>
     </nav>
 
 
 <div class="parallax">
-    <h1>TOTo by byl tvuj napooj</h1>
+    <h4></h4>
 </div>
 <article>
-    <div>
-    Scroll Up and Down this page to see the parallax scrolling effect.
-    This div is just here to enable scrolling.
-    Tip: Try to remove the background-attachment property to remove the scrolling effect.
+    <div class="card-flex-wrap">
+        <div class="card">
+            <div style="color:black">
+                <h3>Elektroinstalace zařízení</h3>
+                <p>Zařídíme pro vás celou elektroinstalaci se vším všudy</p>
+                <p>Přes výrobu, instalaci až revizi zařízení</p>
+            </div>
+        </div>
+        <div class="card">
+            <div style="color:black">
+                <h3>Průmyslová elektromontáž</h3>
+            </div>
+        </div>
+        <div class="card">
+            <div style="color:black">
+                <h3>Servisní činnosti</h3>
+            </div>
+        </div>
+        
     </div>
 </article>
     <script src="main.js"></script>
