--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Účetnicví kvalitně a v čas</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="Styles/normalize.css">
+      <link rel="stylesheet" href="Styles/main.css">
+      <link rel="stylesheet" href="Styles/fonts.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Tangerine:wght@700&display=swap" rel="stylesheet">
@@ -37,10 +37,10 @@
         <div class="container">
             <a href="#"><h1>uctojbc</h1></a>
             <div class="menu">
-                <a href="#" class="is-active">Home</a>
-                <a href="./Nabídky.html">Nabídky</a>
-                <a href="#">O nás</a>
-                <a href="./Contact.html">Contact</a>
+                <a href="index.html" class="is-active">Home</a>
+                <a href="Stránky/Nabídky.html">Nabídky</a>
+                <a href="Stránky/Onás.html">O nás</a>
+                <a href="Stránky/Kontakt.html">Kontakt</a>
             </div>
             
             
@@ -51,9 +51,10 @@
                     <span></span>
                 </button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="#home">Home</a>
-                  <a href="#about">Project</a>
-                  <a href="#contact">Contact</a>
+                  <a href="index.html">Home</a>
+                  <a href="Stránky/Nabídky.html">Nabídky</a>
+                  <a href="Stránky/Onás.html">O nás</a>
+                  <a href="Stránky/Kontakt.html">Kontakt</a>
                 </div>
             </div>
         </div>
