--- a/Stránky/Kontakt.html
+++ b/Stránky/Kontakt.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="main.css">
+    <title>Účetnicví kvalitně a v čas</title>
+    <link rel="stylesheet" href="Styles/normalize.css">
+      <link rel="stylesheet" href="Styles/main.css">
+      <link rel="stylesheet" href="Styles/fonts.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Tangerine:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -27,7 +31,7 @@
                     <span></span>
                 </button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="#home">Home</a>
+                  <a href="./index.html">Home</a>
                   <a href="#about">Nabídka služeb</a>
                   <a href="#contact">Contact</a>
                 </div>
@@ -42,9 +46,9 @@
         <p>Švédská 27</p>
         <p>46602 Jablonec nad Nisou</p>
         <p>IČ 27940845DIČ CZ27940845</p>
-        
     </div>
 </div>
+
 <script src="main.js"></script>
 </body>
 </html>
