--- a/Stránky/Nabídky.html
+++ b/Stránky/Nabídky.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Účetnicví kvalitně a v čas</title>
     <link rel="stylesheet" href="../Styles/normalize.css">
-      <link rel="stylesheet" href="../Styles/main.css">
-      <link rel="stylesheet" href="../Styles/fonts.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="../Styles/main.css">
+    <link rel="stylesheet" href="../Styles/fonts.css">
+    <link rel="preconnect" href="../https://fonts.googleapis.com">
+    <link rel="preconnect" href="../https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Tangerine:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <div class="container">
-            <a href="#"><h1>uctojbc</h1></a>
+            <a href="../index.html"><h1>uctojbc</h1></a>
             <div class="menu">
                 <a href="../index.html">Home</a>
                 <a href="Nabídky.html" class="is-active">Nabídky</a>
-                <a href="Onás.html">O nás</a>
                 <a href="Kontakt.html">Kontakt</a>
+                <a href="Zdroje.html">Zdroje</a>
             </div>
             
             
@@ -31,10 +31,10 @@
                     <span></span>
                 </button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="../index.html">Home</a>
-                  <a href="Stránky/Nabídky.html">Nabídky</a>
-                  <a href="Stránky/Onás.html">O nás</a>
-                  <a href="Stránky/Kontakt.html">Kontakt</a>
+                    <a href="../index.html">Home</a>
+                    <a href="Nabídky.html">Nabídky</a>
+                    <a href="Kontakt.html">Kontakt</a>
+                    <a href="Zdroje.html">Zdroje</a>
                 </div>
             </div>
         </div>
@@ -42,11 +42,10 @@
 <div class="header-background">
     <h6>Naše nabídky</h6>
 </div>
-
 <header>
     <b>
         <h5>
-           Vyberte si z možností které jsou plně dostupné
+           Vyberte si z možností které jsou dostupné
         </h5>
     </b>
 </header>
