--- a/Stránky/Zdroje.html
+++ b/Stránky/Zdroje.html
@@ -19,8 +19,8 @@
             <div class="menu">
                 <a href="../index.html">Home</a>
                 <a href="Nabídky.html">Nabídky</a>
-                <a href="Kontakt.html" class="is-active">Kontakt</a>
-                <a href="Zdroje.html">Zdroje</a>
+                <a href="Kontakt.html">Kontakt</a>
+                <a href="Zdroje.html" class="is-active">Zdroje</a>
             </div>
             <div class="dropdown">
                 <button onclick="myFunction()" class="hamburger is-active">   
@@ -29,27 +29,22 @@
                     <span></span>
                 </button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="../index.html">Home</a>
-                  <a href="Nabídky.html">Nabídky</a>
-                  <a href="Kontakt.html">Kontakt</a>
-                  <a href="Zdroje.html">Zdroje</a>
+                    <a href="../index.html">Home</a>
+                    <a href="Nabídky.html">Nabídky</a>
+                    <a href="Kontakt.html">Kontakt</a>
+                    <a href="Zdroje.html">Zdroje</a>
                 </div>
             </div>
         </div>
     </nav>
-<div class="header-background02">
-    <h6>Ozvěte se!</h6>
-</div>
-<div class="section">
-    <h2>Kontakt</h2>
-    <h3>Tel: +420 702 398 449</h3>
-    <p>Email: sepsova@uctojbc.cz</p>
-    <p>Marcela Šepsová</p>
-    <p>Švédská 27</p>
-    <p>46602 Jablonec nad Nisou</p>
-    <p>IČ 27940845DIČ CZ27940845</p>
-</div>
+<div class="zdroje">
+    <div class="zdroje-seznam">
+        <li>
+            <a>AOHOIJSJDALKJ</a>
+        </li>
 
-<script src="main.js"></script>
+    </div>
+
+</div>
 </body>
 </html>
