--- a/Stránky/Zdroje.html
+++ b/Stránky/Zdroje.html
@@ -37,13 +37,20 @@
             </div>
         </div>
     </nav>
+<header>
+    <h5 class="title">
+        Zdroje věcí využity na stránce
+    </h5>
+</header>
 <div class="zdroje">
-    <div class="zdroje-seznam">
-        <li>
-            <a>AOHOIJSJDALKJ</a>
-        </li>
-
-    </div>
+    <ul>
+        <li>https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown</li>
+        <li>https://cdn.pixabay.com/photo/2018/03/27/21/43/startup-3267505_1280.jpg</li>
+        <li>https://cdn.pixabay.com/photo/2014/07/06/13/55/calculator-385506_1280.jpg</li>
+        <li>https://www.youtube.com/watch?v=dIyVTjJAkLw</li>
+        <li>samoT dna asaS</li>
+    </ul>
+</div>
 
 </div>
 </body>
